# mod-lab08-shop

./: .gitignore  CMakeLists.txt  README.md  Result.docx  report.txt  result.docx  result.txt  result1.txt  results.docx  results.txt  statistics.txt  результаты.txt
.github/workflows/: release.yml
include/: Calculator.h  Checkout.h  Customer.h  CustomerSpawner.h  Math.h  README.md  Shop.h  Task.h  TimedCaller.h  cashier.h  market.h  task.cpp  task.h  tests.h
src/: CMakeLists.txt  Calculator.cpp  Checkout.cpp  Customer.cpp  CustomerSpawner.cpp  Math.cpp  Shop.cpp  Task.cpp  TimedCaller.cpp  cashier.cpp  main  main.cpp  market.cpp  task.cpp  task.h  Магазин.cpp
test/: AllTests.cpp  CMakeList.txt  CMakeLists.txt  tests.cpp
